--- a/2011/src/Makefile
+++ b/2011/src/Makefile
@@ -1,5 +1,5 @@
 run: *.hs
-	ghc -rtsopts  -with-rtsopts="-M900M" -O3 --make -Wall -fno-warn-missing-signatures Main.hs -o run
+	ghc  -O3 --make -Wall -fno-warn-missing-signatures Main.hs -o run
 
 clean:
 	rm -f *.hi *.o run
