--- a/2011/src/Makefile
+++ b/2011/src/Makefile
@@ -1,5 +1,5 @@
 run: *.hs
-	ghc  -O3 --make -Wall -fno-warn-missing-signatures Main.hs -o run
+	ghc   -fforce-recomp  -rtsopts -with-rtsopts="-hc" -O3 --make -Wall -prof -auto-all -fno-warn-missing-signatures Main.hs -o run
 
 clean:
 	rm -f *.hi *.o run
